--- a/lora-communication/transmitter/firmware/Makefile
+++ b/lora-communication/transmitter/firmware/Makefile
@@ -3,7 +3,7 @@ BUILD_DIR?=../build/colorlight_i5
 include $(BUILD_DIR)/software/include/generated/variables.mak
 include $(SOC_DIRECTORY)/software/common.mak
 
-OBJECTS   = crt0.o main.o
+OBJECTS   = crt0.o main.o sensor.o lora.o
 
 all: main.bin
 
